@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.11
 
+  *) core: Disallow the mixing of relative and absolute Options PR 33708.
+     [Sönke Tesch <st kino-fahrplan.de>]
+
   *) core: When exporting request headers to HTTP_* environment variables,
      drop variables whose names contain invalid characters. Describe in the
      docs how to restore the old behaviour. [Malte S. Stretz <mss apache org>]
